# agent_3ds

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_align_with_models.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  clarification_agent.py  design_agent.py  graph.py  prompts.py  requirement_agent.py  scene_assembler.py  state.py  validation_agent.py
backend/app/api/: router.py
backend/app/models/: __init__.py  conversation.py  job.py  project.py
backend/app/schemas/: __init__.py  job.py  project.py  scene.py
backend/app/services/: job_service.py  max_worker_client.py  project_service.py
backend/app/tasks/: pipeline_tasks.py  redis_state_store.py
backend/app/utils/: file_utils.py  logger.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  jobs.ts  projects.ts
frontend/src/hooks/: useJobPolling.ts  useProject.ts
frontend/src/pages/: ChatPage.tsx  NewProjectPage.tsx  ProjectDetailPage.tsx  ProjectListPage.tsx
frontend/src/store/: projectStore.ts
frontend/src/types/: index.ts
max_worker/: .env.example  config.py  requirements.txt  worker_service.py
max_worker/scripts/templates/: base_setup.ms  standard_render_setup.ms  vray_setup.ms
scripts/: start_dev.bat  start_dev.sh
(+30 files in other folders)
