[project]
name = "agent-3ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.13.1",
    "anthropic==0.28.0",
    "asyncpg==0.29.0",
    "celery[redis]==5.4.0",
    "ezdxf==1.3.3",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "langchain==0.2.5",
    "langchain-anthropic==0.1.15",
    "langchain-openai==0.1.8",
    "langgraph==0.1.5",
    "loguru==0.7.2",
    "networkx==3.3",
    "numpy==1.26.4",
    "openai==1.30.5",
    "pillow==10.3.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.3",
    "pydantic-settings==2.3.1",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "redis==5.0.4",
    "scipy==1.13.0",
    "shapely==2.0.4",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.29.0",
]
